Fixed another bug with the scrollbar.

--- a/Common/css/style.css
+++ b/Common/css/style.css
@@ -137,7 +137,6 @@ input[id='critical']:checked + label {
 }
 
 #logger-view {
-	overflow-y: scroll;
 	max-height: 430px;
 	text-align: left;
 }
